--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "portfolio",
-    "homepage": "https://namngxthanh.github.io/portfolio/",
+    "homepage": "https://namngxthanh.github.io/portfolio-deploy/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -19,7 +19,6 @@
         "@react-three/fiber": "^9.1.2",
         "@react-three/postprocessing": "^3.0.4",
         "@tailwindcss/vite": "^4.1.7",
-        "gh-pages": "^6.3.0",
         "gsap": "^3.13.0",
         "react": "^19.1.0",
         "react-countup": "^6.5.3",
@@ -36,6 +35,7 @@
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
+        "gh-pages": "^6.3.0",
         "globals": "^16.0.0",
         "vite": "^6.3.5"
     }
